Remove fixed navbar on mobile

--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -17,6 +17,12 @@ $navbar-padding-bottom: 25px;
   padding-bottom: $navbar-padding-bottom;
 }
 
+.navbar-toggle {
+  padding: 15px 10px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
 .navbar-default .navbar-nav > li > a.flat-button {
   margin: 10px 20px 0px 0px;
   padding-top: 15px;
@@ -47,4 +53,20 @@ $navbar-padding-bottom: 25px;
     text-decoration: none;
     background-color: transparent;
   }
+}
+
+@media (max-width: 767px) {
+
+  body {
+    padding-top: 0px;
+  }
+
+  .navbar-fixed-top {
+    position: relative;
+  }
+
+  .navbar-nav {
+    margin: 0px -15px;
+  }
+
 }
