--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,3 +1,6 @@
+$desktop: "(min-width: 1024px)";
+$mobile: "(max-width: 767px)";
+
 html, body {
   height: 100%;
 }
@@ -6,6 +9,10 @@ body {
   font-family: 'open sans';
   -webkit-font-smoothing: antialiased;
   padding-top: 70px;
+
+  @include breakpoint($mobile) {
+    padding-top: 0px;
+  }
 }
 
 .container {
